--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Stanford Math Tournament [SMT] is an high school contest designed around values of collaboration, love for mathematics, and fun."
+      content="Stanford Math Tournament [SMT] is a high school contest designed around values of collaboration, love for mathematics, and fun."
     />
     <link rel="icon" type="image/png" href="%svelte.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
