--- a/src/app.html
+++ b/src/app.html
@@ -23,15 +23,22 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-
+    %svelte.head%
+  </head>
+  <body>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E7QWWC619"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0E7QWWC619"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-0E7QWWC619');
+      gtag("config", "G-0E7QWWC619");
     </script>
 
     <div style="min-height: 100vh">%svelte.body%</div>
