--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
     />
     <link rel="icon" type="image/png" href="%svelte.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" content="/favicon.png" />
+    <meta property="og:image" content="/SMT Black.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <script
