--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
       name="description"
       content="Stanford Math Tournament [SMT] is a high school contest designed around values of collaboration, love for mathematics, and fun."
     />
-    <link rel="icon" type="image/png" href="%svelte.assets%/favicon.png" />
+    <link rel="icon" type="image/png" href="%svelte.assets%/SMT Black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="/SMT Black.png" />
 
