--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-0E7QWWC619"
+      src="https://www.googletagmanager.com/gtag/js?id=G-JXXVYG495Q"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -38,7 +38,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-0E7QWWC619");
+      gtag("config", "G-JXXVYG495Q");
     </script>
 
     <div style="min-height: 100vh">%svelte.body%</div>
