cleanup + change logo color based on theming

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,24 @@
       name="description"
       content="Stanford Math Tournament [SMT] is a high school contest designed around values of collaboration, love for mathematics, and fun."
     />
-    <link rel="icon" type="image/png" href="%svelte.assets%/SMT Black.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%svelte.assets%/SMT Black.png"
+      media="(prefers-color-scheme:no-preference)"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%svelte.assets%/SMT White.png"
+      media="(prefers-color-scheme:dark)"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%svelte.assets%/SMT Black.png"
+      media="(prefers-color-scheme:light)"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="/SMT Black.png" />
 
