--- a/src/app.html
+++ b/src/app.html
@@ -40,7 +40,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    %svelte.head%
+    %sveltekit.head%
   </head>
   <body>
     <!-- Google tag (gtag.js) -->
@@ -58,6 +58,6 @@
       gtag("config", "G-JXXVYG495Q");
     </script>
 
-    <div style="min-height: 100vh">%svelte.body%</div>
+    <div style="min-height: 100vh">%sveltekit.body%</div>
   </body>
 </html>
