--- a/src/app.html
+++ b/src/app.html
@@ -9,19 +9,19 @@
     <link
       rel="icon"
       type="image/png"
-      href="%svelte.assets%/SMT Black.png"
+      href="/SMT Black.png"
       media="(prefers-color-scheme:no-preference)"
     />
     <link
       rel="icon"
       type="image/png"
-      href="%svelte.assets%/SMT White.png"
+      href="/SMT White.png"
       media="(prefers-color-scheme:dark)"
     />
     <link
       rel="icon"
       type="image/png"
-      href="%svelte.assets%/SMT Black.png"
+      href="/SMT Black.png"
       media="(prefers-color-scheme:light)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
