--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -49,13 +49,13 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-JXXVYG495Q"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || []
       function gtag() {
-        dataLayer.push(arguments);
+        dataLayer.push(arguments)
       }
-      gtag("js", new Date());
+      gtag('js', new Date())
 
-      gtag("config", "G-JXXVYG495Q");
+      gtag('config', 'G-JXXVYG495Q')
     </script>
 
     <div style="min-height: 100vh">%sveltekit.body%</div>
